# Chess-vs-AI

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  board.cpp  board.h  chess_types.h  move.cpp  move.h  move_generator.cpp  move_generator.h
backend/: CMakeLists.txt
backend/include/: board.h  check.h  chess_types.h  game_state.h  move_generator.h  precompute_moves.h  zobrist_hash.h  zobrist_keys.h
backend/include/board/: board.h
backend/include/book/: opening_book.h  opening_book_data.h
backend/include/check/: check.h
backend/include/engine/: engine.h  evaluation.h  piece_tables.h  precompute.h  transposition_table.h
backend/include/game/: game.h  game_state.h
backend/include/move/: move.h  move_generator.h  move_info.h  precompute_moves.h
backend/src/: backend_api.cpp  check.cpp  move_generator.cpp  opening_book.cpp  zobrist_hash.cpp  zobrist_keys.cpp
backend/src/board/: board.cpp
backend/src/check/: check.cpp
backend/src/engine/: engine.cpp  evaluation.cpp  transposition_table.cpp
backend/src/game/: game.cpp
backend/src/move/: move_generator.cpp
backend/tests/: CMakeLists.txt
backend/tests/board/: CMakeLists.txt  bitboard_tests.cpp  board_debug.cpp  board_debug.h  board_tests.cpp  board_utilities.cpp  board_utilities.h  move_tests.cpp
backend/tests/check/: CMakeLists.txt  check_tests.cpp
backend/tests/move/: CMakeLists.txt  castling_tests.cpp  en_passant_tests.cpp  move_debug.h  move_generator_tests.cpp  move_tests.cpp  promotion_tests.cpp
backend/tests/move/move_generation/: bishop_moves_tests.cpp  knight_moves_tests.cpp  pawn_moves_tests.cpp  queen_moves_tests.cpp  rook_moves_tests.cpp
backend/tests/move/pieces/: bishop_moves_tests.cpp  king_moves_tests.cpp  knight_moves_tests.cpp  pawn_moves_tests.cpp  queen_moves_tests.cpp  rook_moves_tests.cpp
docs/html/: annotated.html  annotated_dup.js  board_8cpp.html  board_8cpp.js  board_8h.html  board_8h_source.html  check_8cpp.html  check_8cpp.js  check_8h.html  check_8h.js  check_8h_source.html  chess__types_8h.html  chess__types_8h.js  chess__types_8h_source.html  class_board-members.html  class_board.html  class_board.js  class_check-members.html  class_check.html  class_check.js  class_move_generator-members.html  class_move_generator.html  class_move_generator.js  class_precompute_moves-members.html  class_precompute_moves.html  class_precompute_moves.js  classes.html  dir_27747142951285b09bacafa002e92b5f.html  dir_27747142951285b09bacafa002e92b5f.js  dir_8c739bbef76d64b22d6b0911c526dd76.html  dir_8c739bbef76d64b22d6b0911c526dd76.js  dir_afc1e89bdcbaba0f1e323dc5f755439c.html  dir_afc1e89bdcbaba0f1e323dc5f755439c.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  (+33 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_5.js  enumvalues_6.js  enumvalues_8.js  files_1.js  files_2.js  files_3.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  (+15 more)
docs/latex/: annotated.tex  board_8cpp.tex  board_8h.tex  board_8h_source.tex  check_8cpp.tex  check_8h.tex  check_8h_source.tex  chess__types_8h.tex  chess__types_8h_source.tex  class_board.tex  class_check.tex  class_move_generator.tex  class_precompute_moves.tex  dir_27747142951285b09bacafa002e92b5f.tex  dir_8c739bbef76d64b22d6b0911c526dd76.tex  dir_afc1e89bdcbaba0f1e323dc5f755439c.tex  files.tex  move_8h.tex  move_8h_source.tex  move__generator_8cpp.tex  move__generator_8h.tex  move__generator_8h_source.tex  namespace_chess.tex  namespace_chess_move.tex  namespaces.tex  precompute__moves_8h.tex  precompute__moves_8h_source.tex  refman.tex  struct_chess_move_1_1_move.tex  struct_move.tex
frontend/src/: index.css  main.tsx
frontend/src/assets/pieces/: READEME.md
frontend/src/components/chessboard/: chessboard.css  chessboard.tsx
frontend/src/components/promotion_modal/: promotion_modal.css  promotion_modal.tsx
frontend/src/types/: move.ts  piece.ts
frontend/src/utils/: colour.ts  game_state.ts  move_type.ts  promotion.ts
scripts/: backend_tests.bat  board_tests.bat  check_tests.bat  compile_backend.bat  configure.bat  configure_backend.bat  configure_tests.bat  generate_zobrist_keys.py  move_tests.bat  tests_setup.bat
